Add cart modal with logic and checkout component

--- a/src/index.css
+++ b/src/index.css
@@ -6,3 +6,8 @@
   -ms-overflow-style: none; /* IE and Edge */
   scrollbar-width: none; /* Firefox */
 }
+
+input:focus{
+  inset: 0;
+  outline: none;
+}
